--- a/er-client/src/assets/styles.css
+++ b/er-client/src/assets/styles.css
@@ -2,6 +2,10 @@ h1 {
   margin-bottom: 0;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 progress {
   border-radius: 0;
   width: 100%;
@@ -15,4 +19,31 @@ progress::-webkit-progress-bar {
 progress::-webkit-progress-value {
   background-color: rgb(81, 180, 255);
   transition: 300ms all;
+}
+
+header {
+  padding: 1em;
+}
+
+main {
+  padding: 1em;
+}
+
+.modal {
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 3em;
+  overflow: scroll;
+}
+
+.modal-content {
+  box-sizing: border-box;
+  padding: 1em;
+  border-radius: 1em;
+  box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
 }
