--- a/er-client/src/assets/styles.css
+++ b/er-client/src/assets/styles.css
@@ -44,6 +44,7 @@ main {
 .modal-content {
   box-sizing: border-box;
   padding: 1em;
+  padding-bottom: 3em;
   border-radius: 1em;
   box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
 }
